fix(style): prevent card to stretch to end of page

--- a/src/components/molecules/character-card/styles.module.css
+++ b/src/components/molecules/character-card/styles.module.css
@@ -1,6 +1,7 @@
 .card {
   display: flex;
   color: var(--primary);
+  max-height: 250px;
 }
 
 .actionArea {
